refactor(#1) : 카테고리 추가